--- a/search.html
+++ b/search.html
@@ -112,5 +112,6 @@
     <script>
       $(document).foundation();
     </script>
+    <script src="https://apis.ucsf.edu/jsapi?library"></script>
   </body>
 </html>
