add an example using dynamically generated content

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 <ul>
 <li><a href="search.html">1 breakpoint</a>
 <li><a href="search2.html">2 breakpoints</a>
+<li><a href="search3.html">1 breakpoint, dynamically generated content</a>
 </ul>
